# MLOps-lab1-homework

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  main.py  pyproject.toml
tests/: test_predict.py
